add generated code